# CAP5510-Bioinformatics-Final-Project

./: .gitignore  README.md
protein_language_modeling/: data.py  install.sh  interfaces.py  main.py  pyproject.toml  utils.py
protein_language_modeling/data/: thermomutdb_alphafold_investigation.csv
protein_language_modeling/src/: casp_analysis.ipynb  casp_set.ipynb  casp_structure_prediction_results.csv  data.py  main.py  models.py  thermomut_analysis.ipynb  thermomut_set.ipynb  thermomutdb_prediction_results_mutant.csv  thermomutdb_prediction_results_unaltered.csv  utils.py
