[project]
name = "protein_language_modeling"
version = "0.0.0"
description = "Project for CAP5510: Running the ESM Protein model"
readme = "README.md"
authors = [
    { name = "Da-Emp66", email = "asherbean10@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "biopython>=1.85",
    "esm>=3.1.3",
    "fair-esm==2.0.1",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "py3dmol>=2.4.2",
    "python-dotenv>=1.0.1",
    "tmscoring>=0.4.post0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.45.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
fair-esm = { git = "https://github.com/facebookresearch/esm.git" }
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.dependency-metadata]]
name = "fair-esm"
version = "2.0.1"
requires-dist = []
